--- a/MagicYouPlayer/ChannelCollectionCell/ChannelsCollectionViewCell.xib
+++ b/MagicYouPlayer/ChannelCollectionCell/ChannelsCollectionViewCell.xib
@@ -27,7 +27,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="0E4-PT-vnB"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
