--- a/MagicYouPlayer/Base.lproj/Main.storyboard
+++ b/MagicYouPlayer/Base.lproj/Main.storyboard
@@ -103,7 +103,7 @@
                                                 </constraints>
                                             </view>
                                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="nmw-VN-u6F">
-                                                <rect key="frame" x="18" y="346" width="378" height="160"/>
+                                                <rect key="frame" x="0.0" y="346" width="414" height="160"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="160" id="88R-lT-tPc"/>
@@ -112,11 +112,11 @@
                                                     <size key="itemSize" width="128" height="128"/>
                                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                                    <inset key="sectionInset" minX="18" minY="0.0" maxX="18" maxY="0.0"/>
                                                 </collectionViewFlowLayout>
                                                 <cells>
                                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="UV7-cd-zTM">
-                                                        <rect key="frame" x="0.0" y="16" width="128" height="128"/>
+                                                        <rect key="frame" x="18" y="16" width="128" height="128"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="NYI-Gf-KQP">
                                                             <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
@@ -130,7 +130,7 @@
                                                 </connections>
                                             </collectionView>
                                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="7h0-af-jBc">
-                                                <rect key="frame" x="18" y="546" width="378" height="200"/>
+                                                <rect key="frame" x="0.0" y="546" width="414" height="200"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="200" id="S8O-9N-Q76"/>
@@ -139,11 +139,11 @@
                                                     <size key="itemSize" width="128" height="128"/>
                                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                                    <inset key="sectionInset" minX="18" minY="0.0" maxX="18" maxY="0.0"/>
                                                 </collectionViewFlowLayout>
                                                 <cells>
                                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="WId-9D-5vF">
-                                                        <rect key="frame" x="0.0" y="36" width="128" height="128"/>
+                                                        <rect key="frame" x="18" y="36" width="128" height="128"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="07N-5c-4cy">
                                                             <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
@@ -204,7 +204,7 @@
                                             <constraint firstAttribute="bottom" secondItem="7h0-af-jBc" secondAttribute="bottom" constant="32" id="PDb-SS-AuC"/>
                                             <constraint firstItem="ykV-ec-xvG" firstAttribute="top" secondItem="xIw-Dc-gHr" secondAttribute="bottom" id="W3l-iK-Bag"/>
                                             <constraint firstAttribute="trailing" secondItem="r2l-WP-1sz" secondAttribute="trailing" id="Zi7-86-bdF"/>
-                                            <constraint firstItem="nmw-VN-u6F" firstAttribute="leading" secondItem="fhU-eO-6f6" secondAttribute="leading" constant="18" id="aYN-T2-9lM"/>
+                                            <constraint firstItem="nmw-VN-u6F" firstAttribute="leading" secondItem="fhU-eO-6f6" secondAttribute="leading" id="aYN-T2-9lM"/>
                                             <constraint firstItem="gBx-Oz-sDJ" firstAttribute="top" secondItem="nmw-VN-u6F" secondAttribute="bottom" id="bpj-GN-1oe"/>
                                             <constraint firstItem="r2l-WP-1sz" firstAttribute="top" secondItem="fhU-eO-6f6" secondAttribute="top" id="hu0-OR-X9e"/>
                                             <constraint firstItem="7h0-af-jBc" firstAttribute="top" secondItem="gBx-Oz-sDJ" secondAttribute="bottom" id="jOA-dS-cBN"/>
@@ -212,10 +212,10 @@
                                             <constraint firstAttribute="trailing" secondItem="xIw-Dc-gHr" secondAttribute="trailing" id="n28-hY-fBr"/>
                                             <constraint firstItem="nmw-VN-u6F" firstAttribute="top" secondItem="ykV-ec-xvG" secondAttribute="bottom" id="nZc-cP-Tvu"/>
                                             <constraint firstItem="r2l-WP-1sz" firstAttribute="leading" secondItem="fhU-eO-6f6" secondAttribute="leading" id="wF7-AB-XnI"/>
-                                            <constraint firstItem="7h0-af-jBc" firstAttribute="leading" secondItem="fhU-eO-6f6" secondAttribute="leading" constant="18" id="x4M-78-5N1"/>
+                                            <constraint firstItem="7h0-af-jBc" firstAttribute="leading" secondItem="fhU-eO-6f6" secondAttribute="leading" id="x4M-78-5N1"/>
                                             <constraint firstItem="xIw-Dc-gHr" firstAttribute="top" secondItem="r2l-WP-1sz" secondAttribute="bottom" constant="20" id="yx6-tL-1YZ"/>
-                                            <constraint firstAttribute="trailing" secondItem="nmw-VN-u6F" secondAttribute="trailing" constant="18" id="zEd-aV-Qlr"/>
-                                            <constraint firstAttribute="trailing" secondItem="7h0-af-jBc" secondAttribute="trailing" constant="18" id="zcs-wZ-GPO"/>
+                                            <constraint firstAttribute="trailing" secondItem="nmw-VN-u6F" secondAttribute="trailing" id="zEd-aV-Qlr"/>
+                                            <constraint firstAttribute="trailing" secondItem="7h0-af-jBc" secondAttribute="trailing" id="zcs-wZ-GPO"/>
                                         </constraints>
                                     </view>
                                 </subviews>
